<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DSNAVI-SiteSurvey</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_no_map">Map Not Found !</string>
    <string name="dialog_wifi_alert_title">Scan Complete</string>
    <string name="dialog_wifi_alert_selectedtitle">Select AP</string>
    <string name="dialog_wifi_alert_updates">Update</string>
    <string name="dialog_wifi_alert_confirm">OK</string>
	<string name="dialog_wifi_alert_cancel">Cancel</string>
	<string name="operation_mode_addpoint">Add Point</string>
	<string name="operation_mode_edit">Edit Point</string>
	<string name="operation_mode_drawline">Draw Line</string>
	<string name="string_error">Error</string>
	<string name="string_scan_result">Select Position AP</string>
	<!-- Tips -->
	<string name="string_tips_complete_bluepin">Completed the scan</string>
	<string name="string_tips_complete_bluepin_content">Please tap the blue pin to start scan!</string>
	<!-- Mode change -->
	<string name="string_change_to_editmode" >You Can Edit Point Now</string>
	<string name="string_change_to_addpointmode" >You Can Add New Point Now</string>
	<!-- Add , Delete Point state-->
	<string name ="string_point_already_exist">Point Already Exist, Please Check Your Point</string>
	<string name ="string_delete_error_check_connect_with_server">Delete Error, Please Check Your Connection With Server</string>
	<string name ="string_update_error_check_connect_with_server">Update Error, Please Check Your Connection With Server</string>
	
	
	<!-- Connect State -->
	<string name="string_scan_error">Scan Error,Please Check Your Wifi State</string>
	<string name="string_update_error">Update Error,Please Check Your Wifi State</string>
	<string name="string_delete_error">Delete Error,Please Check Your Wifi State</string>
	 
	<!-- pop window item-->
	<string name="pop_window_scan">Scan</string>
	<string name="pop_window_delete">Delete</string>
	<string name="pop_window_info">Info</string>
	<string name="pop_window_info_no_content">No AP setting Information</string>
	
	<!-- Progress Dialog  -->
	<string name="progress_scan">Scanning!!</string>
	<string name="progress_update">Updating!!</string>
	<string name="progress_load">Loading!!</string>
	
	
	<string name="getRssi0">Scan RSSI0 </string>
    <string name="getAPMacAddress">Scan AP Mac Address</string>
    
    <string name="scan_complete">Scan Complete</string>
    <string name="scan_complete_confirm">OK</string>
    <string name="scan_complete_retry">Retry</string>
    <string name="save_scan_data">Save Scan Result</string>
    
    <!-- String for wifi tips -->
    <string name="wifi_alert_title">Remind</string>
    <string name="wifi_alert_msg">Please turn On WIFI</string>
    <!-- update fail mesage -->
    <string name="update_fail_title">Message</string>
    <string name="update_fail_msg">Update Error, Please check your Wi-Fi state.</string>
    
    <!-- main page -->
    <string name="tips">Tips</string>
    <string name="tips_description">Set scan number of times to get datum of \"Received Signal Strength Indication\"</string>
    <string name="step1">Step1</string>
    <string name="server_ip">Server IP</string>
    <string name="step2">Step2</string>
    <string name="scan_count">Scan Number of Times</string>
    <string name="step3">Step3</string>
    <string name="step3_description">Choose any AP in the venue. Please take the device away from the distance of the AP about one meter, tap \"Scan\".</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_skip">Skip</string>
    
    <!-- Language setting -->
    
    <string name="lang_setting">Language</string>
        <!-- for switch lang -->
    <string name="btn_cht">繁體中文</string>
    <string name="btn_chs">簡体中文</string>
    <string name="btn_english">English</string>
    
    <!--about us dialog -->
    <string name="about_us_dialog_title">About us</string>
    <string name="about_us_dialog_messgae">DSRTLS 1.0\n\nCopyright © 2013 DoubleService Co., Ltd. All rights reserved.</string>
    <string name="about_us_dialog_btn">Close</string>
    
</resources>
