<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"        
         	android:orientation="horizontal"
            android:id="@+id/rssi0_button_linear"
            android:layout_alignParentBottom="true"
           android:layout_centerInParent="true"
            
             >
 	<Button
        android:id="@+id/btnScan"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bg_scan"
        android:text="@string/btn_scan"
        android:textColor="#ffffff" />
 	<!-- android:layout_alignRight="@+id/editText_IP" -->
    <Button
        android:id="@+id/btnSkip"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/btnScan"
        android:layout_alignBottom="@+id/btnScan"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@+id/textView1"
        android:background="@drawable/btn_bg_skip"
        android:text="@string/btn_skip"
        android:textColor="#ffffff" />

    
    </LinearLayout>
    <ScrollView 
        android:layout_above="@+id/rssi0_button_linear"
        android:layout_width="match_parent"
    android:layout_height="match_parent" >
        
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
     >

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"        
         	android:orientation="vertical"
            android:id="@+id/rssi0_linear"
             >
    <TextView
        android:id="@+id/top_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:paddingTop="10dp"
        android:background="@drawable/bg_dial"
        android:paddingLeft="10dp"
        
        android:textSize="18dip" />
<!-- android:layout_alignParentTop="true"  android:layout_centerInParent="true"-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/step1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#68D0FE" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/server_ip"
         android:textAppearance="?android:attr/textAppearanceMedium" />

       <EditText
           android:id="@+id/editText_IP"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="10dp"
           android:ems="10"
           android:hint="Please enter server IP"
           android:text="192.168.2.9" >

    </EditText>
 <!-- android:layout_below="@+id/top_textview" -->
   
    
 <!--  android:layout_below="@+id/textView5" -->

 <TextView
     android:id="@+id/textView6"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="10dp"
     android:text="@string/step2"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:textColor="#68D0FE" />

  <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginTop="10dp"
      android:text="@string/scan_count"
      android:textAppearance="?android:attr/textAppearanceMedium" />
 
  <Spinner
        android:id="@+id/spinner_scanCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />
 
  <!-- android:layout_below="@+id/textView2"  -->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/step3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#68D0FE" />
    
 <!--  android:layout_below="@+id/editText_IP"  -->
   
<!--  android:layout_below="@+id/textView1"-->
 
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/step3_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

 <!--android:layout_below="@+id/textView7"-->
 
  
  
   <!--     android:layout_below="@+id/textView6"  -->

	</LinearLayout>
<!--	android:layout_alignRight="@+id/textView6" android:layout_below="@+id/spinner_scanCount" android:layout_marginTop="10dp"-->


 
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>